--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Compassos - Estudio de Dança
 email: your-email@domain.com
 description: >
-baseurl: "/compassos"
+baseurl: "/comp"
 url: "heirian.github.io"
 twitter_username:
 github_username:
