--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Compassos - Estudio de Dança
 email: your-email@domain.com
 description: >
 baseurl: "/comp"
-url: "https://heirian.github.io"
+url: "http://heirian.github.io"
 twitter_username:
 github_username:
 
