--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Compassos - Estudio de Dança
 email: your-email@domain.com
 description: >
-baseurl: "/compassos"
-url: "heirian.github.io"
+baseurl: "/comp"
+url: "https://heirian.github.io"
 twitter_username:
 github_username:
 
