--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Compassos - Estudio de Dança
+title: Compassos - Studio de Dança
 email: your-email@domain.com
 description: >
 baseurl: "/comp"
