change footer, contact and default layout

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Compassos - Stúdio de Dança
 description: >
 baseurl: "/comp"
 url: "https://heirian.github.io"
-phone_number: (62) 3286 -7624
+phone_number: (62) 3286 - 7624
 email: studiocompassos@gmail.com
 address: Rua C-116, Quadra 220 lote 1 número 569, Setor Jardim américa, Goiânia, Goiás.
 
