--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 
 title: Compassos - Stúdio de Dança
-description: >
-baseurl: "/comp"
-url: "https://heirian.github.io"
+description: 
+baseurl: ""
+url: "http://www.studiocompassos.com"
 phone_number: (62) 3286 - 7624
 email: studiocompassos@gmail.com
-address: Rua C-116, Quadra 220 lote 1 número 569, Setor Jardim américa, Goiânia, Goiás.
+address: Rua C-116, Quadra 220 Lote 1 Número 569, Setor Jardim américa, Goiânia, Goiás.
 
 # Build settings
 markdown: kramdown
