update contact email address

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
 baseurl: ""
 url: "http://www.studiocompassos.com"
 phone_number: (62) 3286 - 7624
-email: studiocompassos@gmail.com
+email: studiocompassos@hotmail.com
 address: Rua C-116, Quadra 220 Lote 1 Número 569, Setor Jardim américa, Goiânia, Goiás.
 
 # Build settings
